migrations && notes visibility status (private/public) && fix key gen for notes && fix gitignore file
