# docs/swagger.json
@@ -415,6 +415,10 @@
                     "type": "string",
                     "example": "6b30e5df-5add-42e1-be60-62b6f98afab1"
                 },
+                "is_private": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "title": {
                     "type": "string",
                     "example": "some title"
@@ -461,6 +465,10 @@
                 "content": {
                     "type": "string",
                     "example": "new content"
+                },
+                "is_private": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "note_id": {
                     "type": "string",
